--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,3 @@
 script: wget --version && echo && awk --version && echo && ./srcget.sh -x -A
+notifications:
+   slack: skydreams:1FLUnEeqaNLinKq1p0lJf9F5
