--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: c
-script: wget --version && echo && awk --version && echo && ./srcget.sh -A -x
+script: wget --version && echo && awk --version && echo && ./srcget.sh -A
 notifications:
    slack: skydreams:1FLUnEeqaNLinKq1p0lJf9F5
